# serializer version: 1
# name: test_forecast_daily
  dict({
    'weather.home_forecast': dict({
      'forecast': list([
        dict({
          'condition': 'sunny',
          'datetime': '2022-10-04T15:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 18.0,
          'templow': 3.0,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2022-10-05T15:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 20.0,
          'templow': 9.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2022-10-06T15:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 20.0,
          'templow': 7.0,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2022-10-07T15:00:00+00:00',
          'precipitation_probability': 40,
          'temperature': 13.0,
          'templow': 1.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2022-10-08T15:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 10.0,
          'templow': 3.0,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_daily_with_some_previous_days_data
  dict({
    'weather.home_forecast': dict({
      'forecast': list([
        dict({
          'condition': 'clear-night',
          'datetime': '2022-10-03T15:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': None,
          'templow': -1.0,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2022-10-04T15:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 18.0,
          'templow': 3.0,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2022-10-05T15:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 20.0,
          'templow': 9.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2022-10-06T15:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 20.0,
          'templow': 7.0,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2022-10-07T15:00:00+00:00',
          'precipitation_probability': 40,
          'temperature': 13.0,
          'templow': 1.0,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2022-10-08T15:00:00+00:00',
          'precipitation_probability': 0,
          'temperature': 10.0,
          'templow': 3.0,
        }),
      ]),
    }),
  })
# ---
# name: test_get_environment_canada_raw_forecast_data
  dict({
    'weather.home_forecast': dict({
      'daily_forecast': list([
        dict({
          'icon_code': '30',
          'period': 'Monday night',
          'precip_probability': 0,
          'temperature': -1,
          'temperature_class': 'low',
          'text_summary': 'Clear. Fog patches developing after midnight. Low minus 1 with frost.',
          'timestamp': '2022-10-03T15:00:00+00:00',
        }),
        dict({
          'icon_code': '00',
          'period': 'Tuesday',
          'precip_probability': 0,
          'temperature': 18,
          'temperature_class': 'high',
          'text_summary': 'Sunny. Fog patches dissipating in the morning. High 18. UV index 5 or moderate.',
          'timestamp': '2022-10-04T15:00:00+00:00',
        }),
        dict({
          'icon_code': '30',
          'period': 'Tuesday night',
          'precip_probability': 0,
          'temperature': 3,
          'temperature_class': 'low',
          'text_summary': 'Clear. Fog patches developing overnight. Low plus 3.',
          'timestamp': '2022-10-04T15:00:00+00:00',
        }),
        dict({
          'icon_code': '00',
          'period': 'Wednesday',
          'precip_probability': 0,
          'temperature': 20,
          'temperature_class': 'high',
          'text_summary': 'Sunny. High 20.',
          'timestamp': '2022-10-05T15:00:00+00:00',
        }),
        dict({
          'icon_code': '30',
          'period': 'Wednesday night',
          'precip_probability': 0,
          'temperature': 9,
          'temperature_class': 'low',
          'text_summary': 'Clear. Low 9.',
          'timestamp': '2022-10-05T15:00:00+00:00',
        }),
        dict({
          'icon_code': '02',
          'period': 'Thursday',
          'precip_probability': 0,
          'temperature': 20,
          'temperature_class': 'high',
          'text_summary': 'A mix of sun and cloud. High 20.',
          'timestamp': '2022-10-06T15:00:00+00:00',
        }),
        dict({
          'icon_code': '12',
          'period': 'Thursday night',
          'precip_probability': 0,
          'temperature': 7,
          'temperature_class': 'low',
          'text_summary': 'Showers. Low 7.',
          'timestamp': '2022-10-06T15:00:00+00:00',
        }),
        dict({
          'icon_code': '12',
          'period': 'Friday',
          'precip_probability': 40,
          'temperature': 13,
          'temperature_class': 'high',
          'text_summary': 'Cloudy with 40 percent chance of showers. High 13.',
          'timestamp': '2022-10-07T15:00:00+00:00',
        }),
        dict({
          'icon_code': '32',
          'period': 'Friday night',
          'precip_probability': 0,
          'temperature': 1,
          'temperature_class': 'low',
          'text_summary': 'Cloudy periods. Low plus 1.',
          'timestamp': '2022-10-07T15:00:00+00:00',
        }),
        dict({
          'icon_code': '02',
          'period': 'Saturday',
          'precip_probability': 0,
          'temperature': 10,
          'temperature_class': 'high',
          'text_summary': 'A mix of sun and cloud. High 10.',
          'timestamp': '2022-10-08T15:00:00+00:00',
        }),
        dict({
          'icon_code': '32',
          'period': 'Saturday night',
          'precip_probability': 0,
          'temperature': 3,
          'temperature_class': 'low',
          'text_summary': 'Cloudy periods. Low plus 3.',
          'timestamp': '2022-10-08T15:00:00+00:00',
        }),
        dict({
          'icon_code': '02',
          'period': 'Sunday',
          'precip_probability': 0,
          'temperature': 12,
          'temperature_class': 'high',
          'text_summary': 'A mix of sun and cloud. High 12.',
          'timestamp': '2022-10-09T15:00:00+00:00',
        }),
      ]),
      'hourly_forecast': list([
        dict({
          'condition': 'A mix of sun and cloud',
          'icon_code': '02',
          'precip_probability': 20,
          'temperature': -11,
          'timestamp': '2025-02-19T19:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'A mix of sun and cloud',
          'icon_code': '02',
          'precip_probability': 20,
          'temperature': -10,
          'timestamp': '2025-02-19T20:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'A mix of sun and cloud',
          'icon_code': '02',
          'precip_probability': 20,
          'temperature': -10,
          'timestamp': '2025-02-19T21:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'A mix of sun and cloud',
          'icon_code': '02',
          'precip_probability': 20,
          'temperature': -11,
          'timestamp': '2025-02-19T22:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Mainly cloudy',
          'icon_code': '33',
          'precip_probability': 20,
          'temperature': -11,
          'timestamp': '2025-02-19T23:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Cloudy',
          'icon_code': '10',
          'precip_probability': 20,
          'temperature': -12,
          'timestamp': '2025-02-20T00:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Cloudy',
          'icon_code': '10',
          'precip_probability': 20,
          'temperature': -13,
          'timestamp': '2025-02-20T01:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Cloudy',
          'icon_code': '10',
          'precip_probability': 20,
          'temperature': -13,
          'timestamp': '2025-02-20T02:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Mainly cloudy',
          'icon_code': '33',
          'precip_probability': 20,
          'temperature': -14,
          'timestamp': '2025-02-20T03:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Mainly cloudy',
          'icon_code': '33',
          'precip_probability': 20,
          'temperature': -14,
          'timestamp': '2025-02-20T04:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Mainly cloudy',
          'icon_code': '33',
          'precip_probability': 20,
          'temperature': -15,
          'timestamp': '2025-02-20T05:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Mainly cloudy',
          'icon_code': '33',
          'precip_probability': 20,
          'temperature': -15,
          'timestamp': '2025-02-20T06:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Mainly cloudy',
          'icon_code': '33',
          'precip_probability': 20,
          'temperature': -15,
          'timestamp': '2025-02-20T07:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Mainly cloudy',
          'icon_code': '33',
          'precip_probability': 20,
          'temperature': -16,
          'timestamp': '2025-02-20T08:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Mainly cloudy',
          'icon_code': '33',
          'precip_probability': 20,
          'temperature': -16,
          'timestamp': '2025-02-20T09:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Partly cloudy',
          'icon_code': '32',
          'precip_probability': 20,
          'temperature': -16,
          'timestamp': '2025-02-20T10:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Partly cloudy',
          'icon_code': '32',
          'precip_probability': 20,
          'temperature': -16,
          'timestamp': '2025-02-20T11:00:00+00:00',
          'wind_direction': 'W',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'A mix of sun and cloud',
          'icon_code': '02',
          'precip_probability': 20,
          'temperature': -16,
          'timestamp': '2025-02-20T12:00:00+00:00',
          'wind_direction': 'VR',
          'wind_speed': 5,
        }),
        dict({
          'condition': 'A mix of sun and cloud',
          'icon_code': '02',
          'precip_probability': 20,
          'temperature': -15,
          'timestamp': '2025-02-20T13:00:00+00:00',
          'wind_direction': 'VR',
          'wind_speed': 5,
        }),
        dict({
          'condition': 'A mix of sun and cloud',
          'icon_code': '02',
          'precip_probability': 20,
          'temperature': -14,
          'timestamp': '2025-02-20T14:00:00+00:00',
          'wind_direction': 'VR',
          'wind_speed': 5,
        }),
        dict({
          'condition': 'A mix of sun and cloud',
          'icon_code': '02',
          'precip_probability': 20,
          'temperature': -13,
          'timestamp': '2025-02-20T15:00:00+00:00',
          'wind_direction': 'NW',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Mainly cloudy',
          'icon_code': '03',
          'precip_probability': 20,
          'temperature': -11,
          'timestamp': '2025-02-20T16:00:00+00:00',
          'wind_direction': 'NW',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Periods of light snow',
          'icon_code': '16',
          'precip_probability': 70,
          'temperature': -10,
          'timestamp': '2025-02-20T17:00:00+00:00',
          'wind_direction': 'NW',
          'wind_speed': 10,
        }),
        dict({
          'condition': 'Periods of light snow',
          'icon_code': '16',
          'precip_probability': 70,
          'temperature': -8,
          'timestamp': '2025-02-20T18:00:00+00:00',
          'wind_direction': 'NW',
          'wind_speed': 20,
        }),
      ]),
    }),
  })
# ---
